<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="viewModel"
            type="com.example.miniproyecto1.viewmodel.AuthViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >


        <!-- Title  -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pico botella"
            android:textColor="@color/orange" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:id="@+id/title"/>

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="64dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:text="@={viewModel.email}"
                android:textColor="@color/white"
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@{viewModel.isPasswordValid != null &amp;&amp; viewModel.isPasswordValid ? @color/white : @color/red}"
            app:boxStrokeWidth="2dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLength="10"
                android:text="@={viewModel.password}"
                android:textColor="@color/white"
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Error Message -->
        <TextView
            android:id="@+id/password_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimo_6_digits"
            android:textColor="@color/red"
            android:visibility="@{viewModel.isPasswordValid ? View.GONE : View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
            app:layout_constraintStart_toStartOf="@+id/password_input_layout" />

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@{viewModel.isLoginButtonEnabled ? @color/white : @color/gray}"
            android:textStyle="bold"
            android:enabled="@{viewModel.isLoginButtonEnabled}"
            android:backgroundTint="@color/orange"
            app:cornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/password_error_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewModel.login()}"/>

        <!-- Register Text Button -->
        <TextView
            android:id="@+id/register_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@{viewModel.isRegisterButtonEnabled ? @color/white : @color/gray}"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:enabled="@{viewModel.isRegisterButtonEnabled}"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.register()}"/>


        <ImageView
            android:id="@+id/wave"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="#F6F3F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        </ImageView>



    </androidx.constraintlayout.widget.ConstraintLayout>





</layout>